<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pickers_background"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/visibility_container"
        android:layout_alignLeft="@+id/visibility_container"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/select_share_visibility"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/visibility_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckedTextView
            android:id="@+id/public_visibility"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/social_visibility_item_background"
            android:drawableLeft="@drawable/ic_public_visibility_white_24dp"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/public_visibility"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatCheckedTextView
            android:id="@+id/private_visibility"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/social_visibility_item_background"
            android:drawableLeft="@drawable/ic_private_visibility_white_24dp"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/private_visibility"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatCheckedTextView
            android:id="@+id/people_visibility"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/social_visibility_item_background"
            android:drawableLeft="@drawable/ic_people_visibility_white_24dp"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/people_visibility"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>