<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:expandedTitleMarginBottom="94dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="Giorgi Gogiashvili">

            <ImageView
                android:id="@+id/imageview_cover"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:tint="#5d000000"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:theme="@style/AppTheme"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <ImageView
            android:id="@+id/imageview_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-240dp"
            android:elevation="12dp"
            android:src="@drawable/sample_user_image"
            app:layout_scrollFlags="scroll" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:visibility="gone"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:visibility="gone"
        app:layout_anchor="@+id/recyclerview_content"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/loading_text"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/loading_your_contents" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/loading_text"
            android:layout_alignRight="@+id/loading_text"
            android:layout_below="@+id/loading_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:indeterminate="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:visibility="gone"
        app:layout_anchor="@+id/recyclerview_content"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/error_text"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/loading_failed" />

        <Button
            android:id="@+id/load_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:onClick="onTryLoadAgainClicked"
            android:text="@string/try_again"
            android:theme="@style/AppTheme.PositiveButton" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:visibility="gone"
        app:layout_anchor="@+id/recyclerview_content"
        app:layout_anchorGravity="center">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="No contents"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/empty_filter_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:visibility="gone"
        app:layout_anchor="@+id/recyclerview_content"
        app:layout_anchorGravity="center">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="No contents found"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:visibility="gone"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <ImageButton
                android:id="@+id/exit_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="onHideFilter"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <EditText
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/clear_search"
                android:layout_toRightOf="@+id/exit_search"
                android:background="@null"
                android:hint="@string/content_filter_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1" />

            <ImageButton
                android:id="@+id/clear_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="onClearFilter"
                android:padding="10dp"
                android:src="@drawable/ic_clear_black_24dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>