<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="@dimen/watermark_margin"
        android:src="@drawable/watermark"
        android:tint="@color/colorPrimaryDark" />

    <!-- This is trick to force RelativeLayout match_parent -->
    <!-- Note that dialog is removing layout attributes when inflating this layout as dialog view. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="@dimen/new_content_dialog_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:maxHeight="@dimen/new_content_dialog_max_height">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/note_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:elevation="8dp"
                android:minHeight="200dp"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:id="@+id/top_panel"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/tv_title"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/content_title_hint"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLength="@integer/title_max_length"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/tv_note"
                        android:padding="8dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_social_visibility"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:padding="8dp"
                        android:textAllCaps="false"
                        tools:drawableLeft="@drawable/ic_public_visibility_24dp"
                        tools:text="Public" />
                </LinearLayout>

                <EditText
                    android:id="@+id/tv_note"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:hint="@string/note_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:scrollbars="none"
                    android:textSize="16sp" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <FrameLayout
                    android:id="@+id/image_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:drawSelectorOnTop="true"
                    android:padding="8dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_btn_map_75dp"
                        android:visibility="visible" />

                    <ImageButton
                        android:id="@+id/btn_remove_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_remove_image"
                        android:clickable="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_remove_24dp"
                        android:theme="@style/RemoveButtonStyle" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_panel"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@+id/note_view"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/btn_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_insert_photo_white_24dp" />

                <ImageButton
                    android:id="@+id/btn_pallette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_select_colors_24dp" />

                <ImageButton
                    android:id="@+id/btn_more_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_more_horiz_white_24dp" />

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:minWidth="50dp" />

                <Button
                    android:id="@+id/btn_discard_post"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/discard"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_create_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_create"
                    android:theme="@style/AppTheme.PositiveButton" />
            </LinearLayout>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>